--- a/index.html
+++ b/index.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AluraBooks</title>
-    <link reel="stylesheet" href="styles.css"
+    <link reel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="reset.css">
 </head>
 
 <body>
-    
+    <header class="cabeçalho">
+     <div class="container">
+        <span class="cabeçalho__menu-hamburguer"></span>
+        <img src="img/Logo.svg" alt="Logo da AluraBooks">
+     </div>
+     <div class="container">
+        <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos"></a>
+        <a href="#"><img src="img/Compras.svg" alt="Carrinho de compras"></a>
+        <a href="#"><img src="img/Usuario.svg" alt="Meu perfil"></a>
+     </div>
+    </header>
 </body>
 </html>
